install bootstrap, ng-bootstrap and implement popovers

--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -2,6 +2,7 @@
 <br>
 <br>
 <br>
+<!-- 
 <app-offcanvas-menu-componentes id=""></app-offcanvas-menu-componentes>
 <app-grid id="grid"></app-grid>
 <app-columnas-anidadas id="columnasAnidadas"></app-columnas-anidadas>
@@ -39,9 +40,18 @@
 <app-navs id="navs"></app-navs>
 <app-navbar id="navbar"></app-navbar>
 <app-offcanvas id="offcanvas"></app-offcanvas>
-<app-paginacion id="paginacion"></app-paginacion>
+<app-paginacion id="paginacion"></app-paginacion> 
 
 
+-->
+
+<hr>
+<div class="container">
+    <h1># App-</h1>
+</div>
+<hr>
+
+<app-popovers></app-popovers>
 
 
 
