Video 46 Barras de progreso

--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -41,6 +41,7 @@
 <app-navbar id="navbar"></app-navbar>
 <app-offcanvas id="offcanvas"></app-offcanvas>
 <app-paginacion id="paginacion"></app-paginacion> 
+<app-popovers></app-popovers>
 
 
 -->
@@ -51,8 +52,7 @@
 </div>
 <hr>
 
-<app-popovers></app-popovers>
-
+<app-progress-bar></app-progress-bar>
 
 
 
