--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -42,6 +42,7 @@
 <app-offcanvas id="offcanvas"></app-offcanvas>
 <app-paginacion id="paginacion"></app-paginacion> 
 <app-popovers></app-popovers>
+<app-progress-bar></app-progress-bar>
 
 
 -->
@@ -52,8 +53,7 @@
 </div>
 <hr>
 
-<app-progress-bar></app-progress-bar>
-
+<app-spinners></app-spinners>
 
 
 
