--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -2,6 +2,7 @@
 <br>
 <br>
 <br>
+<app-test-ngbootstrap-library></app-test-ngbootstrap-library>
 <!-- 
 <app-offcanvas-menu-componentes id=""></app-offcanvas-menu-componentes>
 <app-grid id="grid"></app-grid>
@@ -43,6 +44,8 @@
 <app-paginacion id="paginacion"></app-paginacion> 
 <app-popovers></app-popovers>
 <app-progress-bar></app-progress-bar>
+<app-spinners></app-spinners>
+<app-toasts></app-toasts>
 
 
 -->
@@ -53,7 +56,9 @@
 </div>
 <hr>
 
-<app-spinners></app-spinners>
+<app-tooltips></app-tooltips>
+
+
 
 
 
