Video 50 Flexbox Parte1

--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -2,8 +2,8 @@
 <br>
 <br>
 <br>
-<app-test-ngbootstrap-library></app-test-ngbootstrap-library>
 <!-- 
+<app-test-ngbootstrap-library></app-test-ngbootstrap-library>
 <app-offcanvas-menu-componentes id=""></app-offcanvas-menu-componentes>
 <app-grid id="grid"></app-grid>
 <app-columnas-anidadas id="columnasAnidadas"></app-columnas-anidadas>
@@ -46,6 +46,7 @@
 <app-progress-bar></app-progress-bar>
 <app-spinners></app-spinners>
 <app-toasts></app-toasts>
+<app-tooltips></app-tooltips>
 
 
 -->
@@ -56,8 +57,7 @@
 </div>
 <hr>
 
-<app-tooltips></app-tooltips>
-
+<app-flexbox1></app-flexbox1>
 
 
 
