Video 53 Enlaces coloreados

--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -49,6 +49,7 @@
 <app-tooltips></app-tooltips>
 <app-flexbox1></app-flexbox1>
 <app-flexbox2></app-flexbox2>
+<app-flexbox3></app-flexbox3>
 
 
 -->
@@ -59,8 +60,7 @@
 </div>
 <hr>
 
-<app-flexbox3></app-flexbox3>
-
+<app-utilidades-enlaces-coloreados></app-utilidades-enlaces-coloreados>
 
 
 
