--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -50,6 +50,7 @@
 <app-flexbox1></app-flexbox1>
 <app-flexbox2></app-flexbox2>
 <app-flexbox3></app-flexbox3>
+<app-utilidades-enlaces-coloreados></app-utilidades-enlaces-coloreados>
 
 
 -->
@@ -60,7 +61,7 @@
 </div>
 <hr>
 
-<app-utilidades-enlaces-coloreados></app-utilidades-enlaces-coloreados>
+<app-utilidades-ratios></app-utilidades-ratios>
 
 
 
