--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -51,9 +51,10 @@
 <app-flexbox2></app-flexbox2>
 <app-flexbox3></app-flexbox3>
 <app-utilidades-enlaces-coloreados></app-utilidades-enlaces-coloreados>
+<app-utilidades-ratios></app-utilidades-ratios>
 
+ -->
 
--->
 
 <hr>
 <div class="container">
@@ -61,8 +62,7 @@
 </div>
 <hr>
 
-<app-utilidades-ratios></app-utilidades-ratios>
-
+<app-utilidades-position></app-utilidades-position>
 
 
 
