--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -52,6 +52,8 @@
 <app-flexbox3></app-flexbox3>
 <app-utilidades-enlaces-coloreados></app-utilidades-enlaces-coloreados>
 <app-utilidades-ratios></app-utilidades-ratios>
+<app-utilidades-position></app-utilidades-position>
+<app-visually-hidden></app-visually-hidden>
 
  -->
 
@@ -61,9 +63,7 @@
     <h1># App-</h1>
 </div>
 <hr>
-
-<app-utilidades-position></app-utilidades-position>
-
+<app-streched-links></app-streched-links>
 
 
 
