--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -54,6 +54,7 @@
 <app-utilidades-ratios></app-utilidades-ratios>
 <app-utilidades-position></app-utilidades-position>
 <app-visually-hidden></app-visually-hidden>
+<app-streched-links></app-streched-links>
 
  -->
 
@@ -63,9 +64,8 @@
     <h1># App-</h1>
 </div>
 <hr>
-<app-streched-links></app-streched-links>
 
-
+<app-fondos></app-fondos>
 
 
 
