--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -55,6 +55,7 @@
 <app-utilidades-position></app-utilidades-position>
 <app-visually-hidden></app-visually-hidden>
 <app-streched-links></app-streched-links>
+<app-fondos></app-fondos>
 
  -->
 
@@ -65,9 +66,8 @@
 </div>
 <hr>
 
-<app-fondos></app-fondos>
 
-
+<app-bordes></app-bordes>
 
 
 
