--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -56,6 +56,7 @@
 <app-visually-hidden></app-visually-hidden>
 <app-streched-links></app-streched-links>
 <app-fondos></app-fondos>
+<app-bordes></app-bordes>
 
  -->
 
@@ -67,8 +68,7 @@
 <hr>
 
 
-<app-bordes></app-bordes>
-
+<app-overflow></app-overflow>
 
 
 
