--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -57,6 +57,7 @@
 <app-streched-links></app-streched-links>
 <app-fondos></app-fondos>
 <app-bordes></app-bordes>
+<app-overflow></app-overflow>
 
  -->
 
@@ -68,8 +69,7 @@
 <hr>
 
 
-<app-overflow></app-overflow>
-
+<app-sombras></app-sombras>
 
 
 
