--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -58,6 +58,7 @@
 <app-fondos></app-fondos>
 <app-bordes></app-bordes>
 <app-overflow></app-overflow>
+<app-sombras></app-sombras>
 
  -->
 
@@ -69,8 +70,7 @@
 <hr>
 
 
-<app-sombras></app-sombras>
-
+<app-sizing></app-sizing>
 
 
 
