Video 62 tamaños y añadiendo Id para su navegacion de los componentes

--- a/TestBootstrap/src/app/offcanvas-menu-componentes/offcanvas-menu-componentes.component.html
+++ b/TestBootstrap/src/app/offcanvas-menu-componentes/offcanvas-menu-componentes.component.html
@@ -3,23 +3,25 @@
       <div class="col-1">
         <!-- Button Offcanvas -->
         <button 
-            class="btn btn-primary position-fixed fs-6 px-2 py-1 m-0" 
+            class="btn btn-primary position-fixed top-0 mt-5 px-2 py-1 m-0 shadow-lg" 
             type="button" 
             data-bs-toggle="offcanvas" 
             data-bs-target="#offcanvasScrolling" 
             aria-controls="offcanvasScrolling"
+            style="background: #9aca40;"
             > Menu
         </button>
         <!-- Offcanvas -->
-        <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+        <div class="offcanvas offcanvas-start shadow-lg" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasScrollingLabel">
               Componentes
             </h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
+          <hr>
           <div class="offcanvas-body">
-            <p>Practicas realizadas</p>
+            <strong class="mb-3 d-block" >Practicas realizadas</strong>
 
             <a href="#grid" class="list-group-item list-group-item-action">Grid</a>
             <a href="#columnasAnidadas" class="list-group-item list-group-item-action">Columnas Anidadas</a>
@@ -58,6 +60,27 @@
             <a href="#navbar" class="list-group-item list-group-item-action">Navbar</a>
             <a href="#offcanvas" class="list-group-item list-group-item-action">Offcanvas</a>
             <a href="#paginacion" class="list-group-item list-group-item-action">Paginacion</a>
+
+            <a href="#popovers" class="list-group-item list-group-item-action">Popovers</a> 
+            <a href="#progressBar" class="list-group-item list-group-item-action">ProgressBar</a> 
+            <a href="#spinners" class="list-group-item list-group-item-action">Spinners</a> 
+            <a href="#toasts" class="list-group-item list-group-item-action">Toasts</a> 
+            <a href="#tooltips" class="list-group-item list-group-item-action">Tooltips</a> 
+            <a href="#flexbox1" class="list-group-item list-group-item-action">Flexbox1</a> 
+            <a href="#flexbox2" class="list-group-item list-group-item-action">Flexbox2</a> 
+            <a href="#flexbox3" class="list-group-item list-group-item-action">Flexbox3</a> 
+            <a href="#utilidadesEnlacesColoreados" class="list-group-item list-group-item-action">Utilidades Enlaces Coloreados</a> 
+            <a href="#utilidadesRatios" class="list-group-item list-group-item-action">Utilidades Ratios</a> 
+            <a href="#utilidadesPosition" class="list-group-item list-group-item-action">Utilidades Position</a> 
+            <a href="#visuallyHidden" class="list-group-item list-group-item-action">Visually Hidden</a> 
+            <a href="#strechedLinks" class="list-group-item list-group-item-action">Streched Links</a> 
+            <a href="#fondos" class="list-group-item list-group-item-action">Fondos</a> 
+            <a href="#bordes" class="list-group-item list-group-item-action">Bordes</a> 
+            <a href="#overflow" class="list-group-item list-group-item-action">Overflow</a> 
+            <a href="#sombras" class="list-group-item list-group-item-action">Sombras</a> 
+            <a href="#sizing" class="list-group-item list-group-item-action">Sizing</a> 
+
+
 
           </div>
         </div>
