--- a/TestBootstrap/src/app/utilidades-position/utilidades-position.component.html
+++ b/TestBootstrap/src/app/utilidades-position/utilidades-position.component.html
@@ -1,6 +1,7 @@
 <hr>
 <div class="container">
     <h1># App-Utilidades-Position</h1>
+    <strong>Nota. Para verlo hay que quitar el d-none para ver el posicionamiento fijo</strong>
 </div>
 <hr>
 
@@ -22,10 +23,10 @@
     <div class=" mt-5">
         <div class="col-12">
             <div class="position-relative">
-                <div class="bg-primary text-white p-0 fixed-top" style="height: 20px;">
+                <div class="bg-primary text-white p-0 fixed-top d-none" style="height: 20px;">
                     <small class="m-0">Posicionamiento Fijo arriba (# App-Utilidades-Position)</small>
                 </div>
-                <div class="bg-primary text-white p-0 fixed-bottom">
+                <div class="bg-primary text-white p-0 fixed-bottom d-none">
                     <small class="m-0">Posicionamiento Fijo abajo (# App-Utilidades-Position)</small>
                 </div>
     
