--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -2,7 +2,7 @@
 <br>
 <br>
 <br>
-<!-- 
+
 <app-test-ngbootstrap-library></app-test-ngbootstrap-library>
 <app-offcanvas-menu-componentes id=""></app-offcanvas-menu-componentes>
 <app-grid id="grid"></app-grid>
@@ -42,35 +42,35 @@
 <app-navbar id="navbar"></app-navbar>
 <app-offcanvas id="offcanvas"></app-offcanvas>
 <app-paginacion id="paginacion"></app-paginacion> 
-<app-popovers></app-popovers>
-<app-progress-bar></app-progress-bar>
-<app-spinners></app-spinners>
-<app-toasts></app-toasts>
-<app-tooltips></app-tooltips>
-<app-flexbox1></app-flexbox1>
-<app-flexbox2></app-flexbox2>
-<app-flexbox3></app-flexbox3>
-<app-utilidades-enlaces-coloreados></app-utilidades-enlaces-coloreados>
-<app-utilidades-ratios></app-utilidades-ratios>
-<app-utilidades-position></app-utilidades-position>
-<app-visually-hidden></app-visually-hidden>
-<app-streched-links></app-streched-links>
-<app-fondos></app-fondos>
-<app-bordes></app-bordes>
-<app-overflow></app-overflow>
-<app-sombras></app-sombras>
+<app-popovers id="popovers"></app-popovers>
+<app-progress-bar id="progressBar"></app-progress-bar>
+<app-spinners id="spinners"></app-spinners>
+<app-toasts id="toasts"></app-toasts>
+<app-tooltips id="tooltips"></app-tooltips>
+<app-flexbox1 id="flexbox1"></app-flexbox1>
+<app-flexbox2 id="flexbox2"></app-flexbox2>
+<app-flexbox3 id="flexbox3"></app-flexbox3>
+<app-utilidades-enlaces-coloreados id="utilidadesEnlacesColoreados"></app-utilidades-enlaces-coloreados>
+<app-utilidades-ratios id="utilidadesRatios"></app-utilidades-ratios>
+<app-utilidades-position id="utilidadesPosition"></app-utilidades-position>
+<app-visually-hidden id="visuallyHidden"></app-visually-hidden>
+<app-streched-links id="strechedLinks"></app-streched-links>
+<app-fondos id="fondos"></app-fondos>
+<app-bordes id="bordes"></app-bordes>
+<app-overflow id="overflow"></app-overflow>
+<app-sombras id="sombras"></app-sombras>
+<app-sizing id="sizing"></app-sizing>
 
- -->
 
 
-<hr>
+
+<!-- <hr>
 <div class="container">
     <h1># App-</h1>
 </div>
-<hr>
+<hr> -->
 
 
-<app-sizing></app-sizing>
 
 
 
