--- a/TestBootstrap/src/app/navbar/navbar.component.html
+++ b/TestBootstrap/src/app/navbar/navbar.component.html
@@ -1,11 +1,14 @@
 <hr>
 <div class="container">
     <h1># App-Navbar</h1>
+    <strong>Nota. Para verlo hay que quitar el d-noe que esta en la etiqueta navbar</strong>
 </div>
 <hr>
 <!-- navbar-expand-lg    es para ver en que tamaño quiero que aparesca el boton de las 3 rayitas. -->
 <!-- Navbar funciona mejor afuera del contenedor container. -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top d-none">
     <!-- fluid para que el la barra de menu tome todo el ancho de la pagina. -->
     <div class="container-fluid">
         <a href="#" class="navbar-brand"># App-Navbar</a>
