Video 64 Iniciando el proyecto

--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -2,7 +2,7 @@
 <br>
 <br>
 <br>
-
+<!-- 
 <app-test-ngbootstrap-library></app-test-ngbootstrap-library>
 <app-offcanvas-menu-componentes id=""></app-offcanvas-menu-componentes>
 <app-grid id="grid"></app-grid>
@@ -60,7 +60,7 @@
 <app-overflow id="overflow"></app-overflow>
 <app-sombras id="sombras"></app-sombras>
 <app-sizing id="sizing"></app-sizing>
-
+ -->
 
 
 
@@ -71,7 +71,7 @@
 <hr> -->
 
 
-
+<app-portafolio-cesar></app-portafolio-cesar>
 
 
 
