partial video 65 encabezado sin responsive

--- a/TestBootstrap/src/app/portafolio/portafolio-cesar/portafolio-cesar.component.html
+++ b/TestBootstrap/src/app/portafolio/portafolio-cesar/portafolio-cesar.component.html
@@ -1,43 +1,47 @@
-<header class="container">
-    <div class="nav row">
+<header class="container my-5">
+    <div class="nav row g-0 justify-content-between  rounded-top">
         <!-- Logotipo -->
-        <div class=" col">
+        <div class="logo col-auto d-flex align-items-center ps-4">
             <h2 class="fw-bold text-uppercase mb-0">Cesar Luilly</h2>
             <div class="icono">
                 <!-- https://icons.getbootstrap.com/icons/dot/ -->
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="" viewBox="0 0 16 16">
                     <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
                 </svg>  
-                <p class="mb-0">Dessarrollador Web</p>                
             </div>
+            <p class="mb-0">Dessarrollador Web</p>                
         </div>
         <!-- Enlaces -->
-        <nav class="menu col">
-            <a href="">
-                <span>Portafolio</span>
-                <div class="icono">
-                    <!-- https://icons.getbootstrap.com/icons/briefcase/ -->
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-briefcase" viewBox="0 0 16 16">
-                       <path d="M6.5 1A1.5 1.5 0 0 0 5 2.5V3H1.5A1.5 1.5 0 0 0 0 4.5v8A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-8A1.5 1.5 0 0 0 14.5 3H11v-.5A1.5 1.5 0 0 0 9.5 1h-3zm0 1h3a.5.5 0 0 1 .5.5V3H6v-.5a.5.5 0 0 1 .5-.5zm1.886 6.914L15 7.151V12.5a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5V7.15l6.614 1.764a1.5 1.5 0 0 0 .772 0zM1.5 4h13a.5.5 0 0 1 .5.5v1.616L8.129 7.948a.5.5 0 0 1-.258 0L1 6.116V4.5a.5.5 0 0 1 .5-.5z"/>
-                     </svg>
-
+        <nav class="menu col-auto d-flex align-items-stretch">
+            <a href="" class="c1 px-4 d-flex align-items-center text-center text-white text-decoration-none">
+                <div class="w-100">
+                    <span>Portafolio</span>
+                    <div class="icono">
+                        <!-- https://icons.getbootstrap.com/icons/briefcase/ -->
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-briefcase" viewBox="0 0 16 16">
+                           <path d="M6.5 1A1.5 1.5 0 0 0 5 2.5V3H1.5A1.5 1.5 0 0 0 0 4.5v8A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-8A1.5 1.5 0 0 0 14.5 3H11v-.5A1.5 1.5 0 0 0 9.5 1h-3zm0 1h3a.5.5 0 0 1 .5.5V3H6v-.5a.5.5 0 0 1 .5-.5zm1.886 6.914L15 7.151V12.5a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5V7.15l6.614 1.764a1.5 1.5 0 0 0 .772 0zM1.5 4h13a.5.5 0 0 1 .5.5v1.616L8.129 7.948a.5.5 0 0 1-.258 0L1 6.116V4.5a.5.5 0 0 1 .5-.5z"/>
+                         </svg>
+                    </div>
                 </div>
             </a>
-            <a href="">
-                <span>Acerca de</span>
-                <div class="icono">
-                    <!-- https://icons.getbootstrap.com/icons/person-fill/ -->
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
-                        <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
-                      </svg>
-
+            <a href="" class="c2 px-4 d-flex align-items-center text-center text-white text-decoration-none">
+                <div class="w-100">
+                    <span>Acerca de</span>
+                    <div class="icono">
+                        <!-- https://icons.getbootstrap.com/icons/person-fill/ -->
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+                            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
+                          </svg>
+                    </div>
                 </div>
             </a>
-            <a href="">
-                <span>Contacto</span>
-                <!-- https://icons.getbootstrap.com/icons/envelope-fill/ -->
-                <div class="icono">
-                    <i class="bi bi-envelope-fill"></i>
+            <a href="" class="c3 px-4 d-flex align-items-center text-center text-white text-decoration-none">
+                <div class="w-100">
+                    <span>Contacto</span>
+                    <!-- https://icons.getbootstrap.com/icons/envelope-fill/ -->
+                    <div class="icono">
+                        <i class="bi bi-envelope-fill"></i>
+                    </div>
                 </div>
             </a>
         </nav>
