Primero se creo todo los relacionado a atomos y se puso su html correspondiente, despues lo de moleculas

--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -12,7 +12,7 @@
 <app-columnas-alineadas-horizontalmente id="columnasAlineadasHorizontalmente"></app-columnas-alineadas-horizontalmente>
 <app-gutters id="gutters"></app-gutters>
 <app-utilidades id="utilidades"></app-utilidades>
-<app-sitio-responsive id="sitioResponsive"></app-sitio-responsive> 
+<app-sitio-responsive id="sitioResponsive"></app-sitio-responsive>
 <app-tipografia-parte1 id="tipografiaParte1"></app-tipografia-parte1>
 <app-tipografia-parte2 id="tipografiaParte2"></app-tipografia-parte2>
 <app-imagenes id="imagenes"></app-imagenes>
@@ -41,7 +41,7 @@
 <app-navs id="navs"></app-navs>
 <app-navbar id="navbar"></app-navbar>
 <app-offcanvas id="offcanvas"></app-offcanvas>
-<app-paginacion id="paginacion"></app-paginacion> 
+<app-paginacion id="paginacion"></app-paginacion>
 <app-popovers id="popovers"></app-popovers>
 <app-progress-bar id="progressBar"></app-progress-bar>
 <app-spinners id="spinners"></app-spinners>
@@ -60,6 +60,10 @@
 <app-overflow id="overflow"></app-overflow>
 <app-sombras id="sombras"></app-sombras>
 <app-sizing id="sizing"></app-sizing>
+<app-bem1 id="bem1"></app-bem1>
+<app-bem2 id="bem2"></app-bem2>
+<app-atomic-design1 id="atomic-design1"></app-atomic-design1>
+
 <!-- <hr>
 <div class="container">
     <h1># App-</h1>
@@ -139,7 +143,7 @@
 
 
 
-<!-- 
+<!--
 <hr>
 <h1>Contenedores</h1>
 <div class="container borderRed">
