--- a/TestBootstrap/src/app/practicas-bootstrap5/offcanvas-menu-componentes/offcanvas-menu-componentes.component.html
+++ b/TestBootstrap/src/app/practicas-bootstrap5/offcanvas-menu-componentes/offcanvas-menu-componentes.component.html
@@ -2,11 +2,11 @@
     <div class="row mt-3">
       <div class="col-1">
         <!-- Button Offcanvas -->
-        <button 
-            class="btn btn-primary position-fixed top-0 mt-5 px-2 py-1 m-0 shadow-lg" 
-            type="button" 
-            data-bs-toggle="offcanvas" 
-            data-bs-target="#offcanvasScrolling" 
+        <button
+            class="btn btn-primary position-fixed top-0 mt-5 px-2 py-1 m-0 shadow-lg"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasScrolling"
             aria-controls="offcanvasScrolling"
             style="background: #9aca40;"
             > Menu
@@ -61,24 +61,27 @@
             <a href="#offcanvas" class="list-group-item list-group-item-action">Offcanvas</a>
             <a href="#paginacion" class="list-group-item list-group-item-action">Paginacion</a>
 
-            <a href="#popovers" class="list-group-item list-group-item-action">Popovers</a> 
-            <a href="#progressBar" class="list-group-item list-group-item-action">ProgressBar</a> 
-            <a href="#spinners" class="list-group-item list-group-item-action">Spinners</a> 
-            <a href="#toasts" class="list-group-item list-group-item-action">Toasts</a> 
-            <a href="#tooltips" class="list-group-item list-group-item-action">Tooltips</a> 
-            <a href="#flexbox1" class="list-group-item list-group-item-action">Flexbox1</a> 
-            <a href="#flexbox2" class="list-group-item list-group-item-action">Flexbox2</a> 
-            <a href="#flexbox3" class="list-group-item list-group-item-action">Flexbox3</a> 
-            <a href="#utilidadesEnlacesColoreados" class="list-group-item list-group-item-action">Utilidades Enlaces Coloreados</a> 
-            <a href="#utilidadesRatios" class="list-group-item list-group-item-action">Utilidades Ratios</a> 
-            <a href="#utilidadesPosition" class="list-group-item list-group-item-action">Utilidades Position</a> 
-            <a href="#visuallyHidden" class="list-group-item list-group-item-action">Visually Hidden</a> 
-            <a href="#strechedLinks" class="list-group-item list-group-item-action">Streched Links</a> 
-            <a href="#fondos" class="list-group-item list-group-item-action">Fondos</a> 
-            <a href="#bordes" class="list-group-item list-group-item-action">Bordes</a> 
-            <a href="#overflow" class="list-group-item list-group-item-action">Overflow</a> 
-            <a href="#sombras" class="list-group-item list-group-item-action">Sombras</a> 
-            <a href="#sizing" class="list-group-item list-group-item-action">Sizing</a> 
+            <a href="#popovers" class="list-group-item list-group-item-action">Popovers</a>
+            <a href="#progressBar" class="list-group-item list-group-item-action">ProgressBar</a>
+            <a href="#spinners" class="list-group-item list-group-item-action">Spinners</a>
+            <a href="#toasts" class="list-group-item list-group-item-action">Toasts</a>
+            <a href="#tooltips" class="list-group-item list-group-item-action">Tooltips</a>
+            <a href="#flexbox1" class="list-group-item list-group-item-action">Flexbox1</a>
+            <a href="#flexbox2" class="list-group-item list-group-item-action">Flexbox2</a>
+            <a href="#flexbox3" class="list-group-item list-group-item-action">Flexbox3</a>
+            <a href="#utilidadesEnlacesColoreados" class="list-group-item list-group-item-action">Utilidades Enlaces Coloreados</a>
+            <a href="#utilidadesRatios" class="list-group-item list-group-item-action">Utilidades Ratios</a>
+            <a href="#utilidadesPosition" class="list-group-item list-group-item-action">Utilidades Position</a>
+            <a href="#visuallyHidden" class="list-group-item list-group-item-action">Visually Hidden</a>
+            <a href="#strechedLinks" class="list-group-item list-group-item-action">Streched Links</a>
+            <a href="#fondos" class="list-group-item list-group-item-action">Fondos</a>
+            <a href="#bordes" class="list-group-item list-group-item-action">Bordes</a>
+            <a href="#overflow" class="list-group-item list-group-item-action">Overflow</a>
+            <a href="#sombras" class="list-group-item list-group-item-action">Sombras</a>
+            <a href="#sizing" class="list-group-item list-group-item-action">Sizing</a>
+            <a href="#bem1" class="list-group-item list-group-item-action">BEM 1</a>
+            <a href="#bem2" class="list-group-item list-group-item-action">BEM 2</a>
+            <a href="#atomic-design1" class="list-group-item list-group-item-action">Atomic Design 1</a>
 
 
 
