Organismos, template y pagesService completo

--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -63,6 +63,8 @@
 <app-bem1 id="bem1"></app-bem1>
 <app-bem2 id="bem2"></app-bem2>
 <app-atomic-design1 id="atomic-design1"></app-atomic-design1>
+<app-atomic-design1-template id="atomic-design1-template"></app-atomic-design1-template>
+<app-atomic-design1-pages id="atomic-design1-pages"></app-atomic-design1-pages>
 
 <!-- <hr>
 <div class="container">
