--- a/TestBootstrap/src/app/practicas-bootstrap5/bem1/bem1.component.css
+++ b/TestBootstrap/src/app/practicas-bootstrap5/bem1/bem1.component.css
@@ -1,4 +1,7 @@
 
+/*
+ESTO NO FUNCIONA EN COMPONENTES, EN LUGAR DE ESTO
+HABRIA QUE UTILIZAR MEJOR UNA CLASE
 *{
   margin: 0;
   padding: 0;
@@ -9,6 +12,10 @@
 body{
   font-family: arial;
 }
+
+*/
+
+
 
 .navLink{
   text-decoration: none;
