--- a/TestBootstrap/src/app/practicas-bootstrap5/offcanvas-menu-componentes/offcanvas-menu-componentes.component.html
+++ b/TestBootstrap/src/app/practicas-bootstrap5/offcanvas-menu-componentes/offcanvas-menu-componentes.component.html
@@ -82,6 +82,8 @@
             <a href="#bem1" class="list-group-item list-group-item-action">BEM 1</a>
             <a href="#bem2" class="list-group-item list-group-item-action">BEM 2</a>
             <a href="#atomic-design1" class="list-group-item list-group-item-action">Atomic Design 1</a>
+            <a href="#atomic-design1-template" class="list-group-item list-group-item-action">Atomic Design 1 Template</a>
+            <a href="#atomic-design1-pages" class="list-group-item list-group-item-action">Atomic Design 1 Pages</a>
 
 
 
