--- a/TestBootstrap/src/app/practicas-bootstrap5/atomic-design1-pages/atomic-design1-pages.component.html
+++ b/TestBootstrap/src/app/practicas-bootstrap5/atomic-design1-pages/atomic-design1-pages.component.html
@@ -9,6 +9,12 @@
 </div>
 <hr>
 
+<!-- En la pagina se pone ya la informacion real, incluso todavia
+puede sufrir unas modificaciones, pero aqui ya no pasa nada porque
+esto se trajo del TEMPLATE como una copia, entonces podemos tener
+la libertad de modificar para que se acomode mejor a lo que queremos
+presentar -->
+
 <div class="container">
   <header class="header">
     <h2 class="subtitle">Atomic Hosting</h2>
