--- a/TestBootstrap/src/app/practicas-bootstrap5/atomic-design1-template/atomic-design1-template.component.html
+++ b/TestBootstrap/src/app/practicas-bootstrap5/atomic-design1-template/atomic-design1-template.component.html
@@ -10,6 +10,16 @@
 </div>
 <hr>
 
+<!-- Apuntes CESAR.- Tengo entendido que se crean todos los protones,
+      atomos, moleculas y organismos necesarios para crear un template,
+      y ese template una ves creado sirve como referencia para
+      poder hacer una especie de COPY-PASTE en el lugar donde estara la
+      PAGINA y estando alla todavia se puede personalizar aun mas
+      e incluso se le podria quitar o poner mas bloques etc.
+      PERO SEGUN ENTIENDO EL TEMPLATE SIRVE SOLO COMO REFERENCIA
+      AL DISEÑO DE UNA MAQUETA COMUN y ACUERDOS CON UX de cual sera
+      el patron de las paginas completas.
+    -->
 <div class="container">
   <header class="header">
     <h2 class="subtitle">Header</h2>
