--- a/TestBootstrap/src/app/practicas-bootstrap5/atomic-design1/atomic-design1.component.html
+++ b/TestBootstrap/src/app/practicas-bootstrap5/atomic-design1/atomic-design1.component.html
@@ -10,6 +10,7 @@
 <h1 class="ms-5">**PROTONES**</h1>
 <div class="imposter">
   <div class="protones">
+    <!-- Por lo general un proton es un elemento final de HTML -->
     <h1 class="title">Proton Titulo</h1>
     <h2 class="subtitle">Proton Subtitulo</h2>
     <p class="text">Proton Texto normal</p>
