--- a/TestBootstrap/src/app/app.component.html
+++ b/TestBootstrap/src/app/app.component.html
@@ -65,6 +65,12 @@
 <app-atomic-design1 id="atomic-design1"></app-atomic-design1>
 <app-atomic-design1-template id="atomic-design1-template"></app-atomic-design1-template>
 <app-atomic-design1-pages id="atomic-design1-pages"></app-atomic-design1-pages>
+<app-protones id="app-protones"></app-protones>
+<app-atomos id="app-atomos"></app-atomos>
+<app-moleculas id="app-moleculas"></app-moleculas>
+<app-organismos id="app-organismos"></app-organismos>
+<app-templates id="app-templates"></app-templates>
+<app-report id="app-report"></app-report>
 
 <!-- <hr>
 <div class="container">
